# yaeos

./: .gitignore  bulk.csv  fort1.csv  fort2.csv  nano.csv
.github/workflows/: CI.yml
app/: cap_env_trifasico.f90  capilar_envelope.f90  capillary_example_sandoval.f90  fit.f90  isotherm.f90  phase_diagram.f90
example/extra/: benchmark.f90  demo.f90
python/: pyproject.toml  setup.py
python/wheel_pre_confs/: manylinux.sh
src/: thermoprops.f90
src/equilibria/: equilibria.f90  equilibria_state.f90  saturations_points.f90
src/equilibria/boundaries/: phase_env_nano_pt.f90  phase_envelopes_pt.f90  phase_envelopes_px.f90
src/math/: continuation.f90  linalg.f90
src/models/residual_helmholtz/: ar_models.f90
src/models/residual_helmholtz/cubic/: generic_cubic.f90
src/models/residual_helmholtz/cubic/mixing_rules/: base.f90  huron_vidal.f90
test/: test_models_ar_cubic_quadrating_mixing.f90
