[build-system]
build-backend = "setuptools.build_meta"
requires = ["fpm", "meson", "ninja", "numpy", "setuptools", "wheel"]


[tool.black]
line-length = 79
target-version = ["py310"]


[tool.pytest.ini_options]
markers = [
    "marker_name: marker_description",
]


[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*"]

[tool.cibuildwheel.linux]
before-all = "bash python/wheel_pre_confs/manylinux.sh"